1928 [FFMSIndexer] fixed auto-load of audio tracks to the main input tab for some files. Bug #3165894
1927 [HD Streams Extractor] fixed processing of joined input files. Bug #3164153
1926 [FFMSIndexer] improved audio track number detection. Bug #3165894
1925 [Settings] added option to ensure correct playback speed while playing the video preview (defaults to disabled) 
1924 [VideoPlayer] fixed invisible video pixels at the right (7) and bottom (1). Bug #3164635
                   added 1:1 video preview. Feature request #3164305
                   some adjustments
1923 [AVS Script Creator] new video player will be started with previewing the middle of the video
1922 [Update] deprecated update cache files will be deleted 60 days after they have been downloaded
1921 [pre-rendering job] fixed a problem introduced in 1916
1920 [Log] the content of an avs input file will be added to the log
1919 [VideoPlayer] some sizing adjustments
1918 [One-Click] added the FFMSIndexer so that e.g. most AVI and MKV files are now supported.
                 if the FFMSIndexer is used the audio track must be encoded and cannot be muxed only.
1917 [FFMSIndexer] audio avs files will only be created if the indexing was successful
1916 [FileIndexer] added demux option to the audio tracks when using FFMSIndex
                   these audio tracks will be added to the main input tab if "on completion load files" is selected. Feature request #3158957
1915 [VideoPlayer] changed zoom and size behavior
                   fixed starting preview size so that it will always match the screen resolution. Bug #3159086
                   changed seek bar and buttons behavior. Feature request #3003726
                   try to ensure playback speed during playback
1914 [One-Click] fixed handling of video input files with short file names (less than 6 characters including extension). Bug #3160645
1913 [One-Click] chapters will not be added if output container is AVI