@@ -685,7 +685,7 @@ namespace MeGUI
                 }
                 removeStreamsToBeEncoded(ref audio, aStreams);
                 mainForm.Jobs.addJobsWithDependencies(vUtil.GenerateJobSeries(this.videoStream, muxedOutput, aStreams, subtitles, chapters,
-                    desiredSize, splitSize, cot, this.prerender, audio, log, this.device.Text));
+                    desiredSize, splitSize, cot, this.prerender, audio, log, this.device.Text, vInfo.Zones));
                 this.Close();
 			}
 		}
